# gst-plugin-vosk

./: Cargo.toml  README.md
src/: lib.rs
src/transcriber/: imp.rs  mod.rs
src/vosk_client/: mod.rs
