[package]
name = "gst-plugin-vosk"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Caricio <rafael@caricio.com>"]
repository = ""
license = "MPL-2.0"
description = "plugin"
build = "build.rs"

[dependencies]
gst = { package = "gstreamer", version = "0.18" }
gstreamer-base = "0.18"
once_cell = "1"
atomic_refcell = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
futures = "0.3"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time" ] }
async-tungstenite = { version = "0.17", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }

[build-dependencies]
gst-plugin-version-helper = "0.7.3"

[lib]
name = "gstvosk"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
# GStreamer 1.14 is required for static linking
static = ["gst/v1_14"]
capi = []

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
